DMP-3998 Enhance ApplyRetentionCaseAssociatedObjects task to handle versioned media
Merged master